# demos

./: README.md
ai-tinkerers-new-york-march-27-2024/: anthropic_extracting_structured_info.py  anthropic_generate_structured_data.py  anthropic_tools_from_functions.py  config.py  openai_tools.py  openai_tools_from_functions.py  openai_tools_with_mirascope.py  pyproject.toml
ploomber-demo/: __init__.py  app.py  config.py  pyproject.toml
synthetic-dataset-generation/: README.md  queries_and_responses.jsonl  query_answering.py  query_generation.py  synthetic_data_generation.ipynb  template_query.jsonl  template_variable_values.jsonl
synthetic-dataset-generation/.mirascope/versions/query_answering/: 0001_query_answering.py
synthetic-dataset-generation/.mirascope/versions/query_generation/: 0001_query_generation.py
synthetic-dataset-generation/.mirascope/versions/query_template_list/: 0001_query_template_list.py
synthetic-dataset-generation/.mirascope/versions/synthetic_query_generation/: 0001_synthetic_query_generation.py
synthetic-dataset-generation/calls/: query_answering.py  query_template_list.py  synthetic_query_generation.py  template_variable.py
